# smecc

./: CMakeLists.txt  LICENSE.txt  README.txt
examples/ecctools/: eccfile.h  eccread.c  eccverify.c  eccwrite.c
src/: smecc.h  smecc_bitcount.c  smecc_check.c  smecc_check_correct.c  smecc_check_correct_multi.c  smecc_check_multi.c  smecc_compute.c  smecc_compute_multi.c  smecc_deserialize.c  smecc_impl.h  smecc_serialize.c
tests/compute/: test_compute.c
tests/correctable/: test_correctable.c
tests/multi_compute_size/: test_multi_compute_size.c
utils/: gen-bitcount-table.pl  gen-bitexpand-table.pl  gen-parity-table.pl
